--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <title>First Website</title>
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+        <h1>Web development course</h1>
+    </header>
+    <main>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, quidem praesentium dolorum vero exercitationem ipsam alias dolore distinctio ut officiis architecto aliquid velit. Porro odio quos fugiat quibusdam qui ex.</p>
+    </main>
+    <footer>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam, doloremque!</footer>
 </body>
 </html>
